objects/ffct__Bundle__c.object
<CustomObject>
    <customHelpPage>ffct__bundleonlinehelp</customHelpPage>
    <description>The header information for each bundle.</description>
    <fields>
        <fullName>ffct__ApexJobID__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Author__c</fullName>
        <defaultValue>IF(ISBLANK( $User.FirstName ), $User.LastName , $User.FirstName+&quot; &quot;+ $User.LastName )</defaultValue>
        <label>Author</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Bundle_Description__c</fullName>
        <label>Bundle Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffct__Export_Date__c</fullName>
        <label>Export Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffct__MultiCurrency_org_Bundle__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When selected, the bundle created will work on multiple currency organizations. When not selected, the bundle will work on both single currency and multiple currency organizations.</inlineHelpText>
        <label>Is a Multiple Currency Org Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Packages_Installed__c</fullName>
        <label>Packages Installed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Source_Org_Id__c</fullName>
        <label>Source Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Tags__c</fullName>
        <description>Field to maintain tags this bundle is related to.</description>
        <inlineHelpText>Please enter | separated tags to the bundle.</inlineHelpText>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bundle</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>